# sepm-rc-car

./: .bandit  .coveragerc  .gitignore  README.md  audio_effect.py  car.py  checks.sh  environment.yml  game.py  pyproject.toml  rc_car.py  requirements.txt  run-checks.sh  run-tests.sh  run.sh  setup.cfg  setup.py
.github/workflows/: github_actions.yml  pylint.yml  pylint_pytest_git_actions.yml
audit_server/: __init__.py  audit_server.py
docs/: final-rc_car.drawio  meeting-notes.md  rc-car.drawio
docs/transcript/: final_transcript.md
docs/transcript/testing/: transcript.md  transcript_on_testing.md
features/: __init__.py  analytics.feature  child.feature  parent.feature
features/steps/: __init__.py  steps.py
rc_car/: __init__.py  analytics.py  audio_effect.py  audit.py  battery.py  car.py  constants.py  game.py  logger.py  menu_item.py  rc_car_launcher.py  remote.py  utils.py
reports/: bandit.txt  pytest-cov.txt  safety_sec_scan.txt
src/rc_car/: constants.py  game.py  remote.py  utils.py
src/rc_car/car_model/: audio_effect.py  battery.py  car.py  car_status.py  constants.py  remote.py
src/rc_car/logging/: constants.py  logger.py
test/: __init__.py  test_analytics.py  test_audit.py
tests/rc_car/: test_analytics.py  test_battery.py  test_car.py  test_game.py  test_logger.py  test_remote.py  test_utils.py
