[build-system]
requires = [
    "setuptools<60.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "rc_car"
description = "This package provides an application for a game to control a race car."
readme = "README.md"
requires-python = ">=3.6"

[tool.black]
line-length = 88
target_version = ['py36']
preview = true
exclude = '''
/(
    \.eggs         # exclude common directories in the root of the project
  | \.git
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''